--- a/results.html
+++ b/results.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voting Results</title>
-    <style>
-        /* Ensure full height */
-        html, body { 
+    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        /* Ensure full height */        *{
+            font-family: "Poppins", sans-serif;
+        }
+        html, body {
+            
             height: 100%; 
+            width: 100%; 
             margin: 0; 
             padding: 0; 
             font-family: Arial, sans-serif;
@@ -69,9 +73,13 @@
         .clear-button:hover {
             background-color: darkred;
         }
+
     </style>
 </head>
 <body>
+
+
+
     <div class="container">
         <h2>Voting Results</h2>
         <table>
