--- a/dashboard.html
+++ b/dashboard.html
@@ -1,130 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-                *{
-            font-family: "Poppins", sans-serif;
-        }
-        html, body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #e8f5e9; /* Light green background */
-            color: #2e7d32; /* Dark green text */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            overflow: hidden;
-        }
-        /* Video background */
-        .video-bg {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: 0;
-        }
-        .container {
-            width: 80%;
-            max-width: 450px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
-            text-align: center;
-            position: relative;
-            z-index: 1;
-        }
-        h2, h3 {
-            color: #1b5e20;
-        }
-        input, button {
-            display: block; 
-            margin: 15px auto; 
-            padding: 12px;
-            width: 90%;
-            border: 1px solid #81c784;
-            border-radius: 8px;
-            font-size: 18px;
-        }
-        button {
-            background-color: #388e3c;
-            color: white;
-            cursor: pointer;
-            font-weight: bold;
-            border: none;
-        }
-        button:hover {
-            background-color: #2e7d32;
-        }
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+      * {
+        font-family: "Poppins", sans-serif;
+      }
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #e8f5e9; /* Light green background */
+        color: #2e7d32; /* Dark green text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+      }
+      /* Video background */
+      .video-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 0;
+      }
+      .container {
+        width: 80%;
+        max-width: 450px;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        position: relative;
+        z-index: 1;
+      }
+      h2,
+      h3 {
+        color: #1b5e20;
+      }
+      input,
+      button {
+        display: block;
+        margin: 15px auto;
+        padding: 12px;
+        width: 90%;
+        border: 1px solid #81c784;
+        border-radius: 8px;
+        font-size: 18px;
+      }
+      button {
+        background-color: #388e3c;
+        color: white;
+        cursor: pointer;
+        font-weight: bold;
+        border: none;
+      }
+      button:hover {
+        background-color: #2e7d32;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <video class="video-bg" autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+      <source src="background.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
     </video>
-    
+
     <div class="container">
-        <h2>Welcome to E-Voting</h2>
-        <p id="welcomeMessage"></p>
-        <h3>Vote for Your Candidate</h3>
-        <button onclick="vote('NARAYAN RAO RANE SAHEB')">Vote for NARAYAN RAO RANE SAHEB</button>
-        <button onclick="vote('VINAYAK RAUT FALTU')">Vote for VINAYAK RAUT FALTU'</button>
-        <button onclick="vote('NITESH RANE SAHEB')">Vote for NITESH RANE SAHEB</button>
-        <button onclick="vote('NILESH RANE SAHEB')">Vote for NILESH RANE SAHEB</button>
-        <button onclick="logout()" style="background-color: red; width: 100px;">Logout</button>
+      <h2>Welcome to E-Voting</h2>
+      <p id="welcomeMessage"></p>
+      <h3>Vote for Your Candidate</h3>
+      <button onclick="vote('NARAYAN RAO RANE SAHEB')">
+        Vote for NARAYAN RAO RANE SAHEB
+      </button>
+      <button onclick="vote('VINAYAK RAUT FALTU')">
+        Vote for VINAYAK RAUT FALTU'
+      </button>
+      <button onclick="vote('NITESH RANE SAHEB')">
+        Vote for NITESH RANE SAHEB
+      </button>
+      <button onclick="vote('NILESH RANE SAHEB')">
+        Vote for NILESH RANE SAHEB
+      </button>
+      <button onclick="logout()" style="background-color: red; width: 100px">
+        Logout
+      </button>
     </div>
 
     <script>
-        // Check if user is logged in
-        if (localStorage.getItem("isLoggedIn") !== "true") {
-            alert("You must log in first!");
-            window.location.href = "index.html";
+      // Check if user is logged in
+      if (localStorage.getItem("isLoggedIn") !== "true") {
+        alert("You must log in first!");
+        window.location.href = "index.html";
+      }
+
+      document.getElementById(
+        "welcomeMessage"
+      ).innerText = `Hello, ${localStorage.getItem("name")}`;
+
+      function vote(candidate) {
+        let email = localStorage.getItem("email"); // Get logged-in user's email
+        if (!email) {
+          alert("You are not logged in!");
+          return;
         }
 
-        document.getElementById("welcomeMessage").innerText = `Hello, ${localStorage.getItem("name")}`;
+        // Fetch all votes from localStorage
+        let votes = JSON.parse(localStorage.getItem("votes")) || [];
 
-        function vote(candidate) {
-            let email = localStorage.getItem("email"); // Get logged-in user's email
-            if (!email) {
-                alert("You are not logged in!");
-                return;
-            }
-
-            // Fetch all votes from localStorage
-            let votes = JSON.parse(localStorage.getItem("votes")) || [];
-
-            // Check if this email has already voted
-            let userHasVoted = votes.some(vote => vote.email === email);
-            if (userHasVoted) {
-                alert("You have already voted!");
-                return;
-            }
-
-            // Save the new vote with the email
-            votes.push({ email: email, candidate: candidate });
-
-            // Update localStorage
-            localStorage.setItem("votes", JSON.stringify(votes));
-
-            alert(`You voted for ${candidate}`);
+        // Check if this email has already voted
+        let userHasVoted = votes.some((vote) => vote.email === email);
+        if (userHasVoted) {
+          alert("You have already voted!");
+          return;
         }
 
-        function logout() {
-            localStorage.removeItem("isLoggedIn"); // Remove login status
-            localStorage.removeItem("email"); // Remove stored email
-            alert("Logged out successfully!");
-            window.location.href = "index.html"; // Redirect to login page
-        }
+        // Save the new vote with the email
+        votes.push({ email: email, candidate: candidate });
+
+        // Update localStorage
+        localStorage.setItem("votes", JSON.stringify(votes));
+
+        alert(`You voted for ${candidate}`);
+      }
+
+      function logout() {
+        localStorage.removeItem("isLoggedIn"); // Remove login status
+        localStorage.removeItem("email"); // Remove stored email
+        alert("Logged out successfully!");
+        window.location.href = "index.html"; // Redirect to login page
+      }
     </script>
-</body>
+  </body>
 </html>
