--- a/admin-login.html
+++ b/admin-login.html
@@ -18,9 +18,6 @@
         padding: 0;
         font-family: Arial, sans-serif;
         color: #2e7d32; /* Dark green text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
         position: relative;
         overflow: hidden;
       }
@@ -74,23 +71,33 @@
       button:hover {
         background-color: #2e7d32;
       }
+      .maincontainer {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      img{
+        margin: 5px;
+      }
     </style>
   </head>
-  <body>
-    <video class="video-bg" autoplay loop muted>
+  <body><a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>    <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
-
-    <div class="container">
-      <h2>Admin Login</h2>
-      <input type="text" id="adminId" placeholder="Enter Admin ID" />
-      <input
-        type="password"
-        id="adminPassword"
-        placeholder="Enter Admin Password"
-      />
-      <button onclick="adminLogin()">Login</button>
+    <div class="maincontainer">
+      <div class="container">
+        <h2>Admin Login</h2>
+        <input type="text" id="adminId" placeholder="Enter Admin ID" />
+        <input
+          type="password"
+          id="adminPassword"
+          placeholder="Enter Admin Password"
+        />
+        <button onclick="adminLogin()">Login</button>
+      </div>
     </div>
 
     <script>
