--- a/dashboard.html
+++ b/dashboard.html
@@ -18,9 +18,7 @@
         font-family: Arial, sans-serif;
         background-color: #e8f5e9; /* Light green background */
         color: #2e7d32; /* Dark green text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
         position: relative;
         overflow: hidden;
       }
@@ -69,14 +67,24 @@
       button:hover {
         background-color: #2e7d32;
       }
+      .maincontainer{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      img{
+        margin: 5px;
+      }
     </style>
   </head>
-  <body>
+  <body>   <a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
-
+<div class="maincontainer">
     <div class="container">
       <h2>Welcome to E-Voting</h2>
       <p id="welcomeMessage"></p>
@@ -97,6 +105,7 @@
         Logout
       </button>
     </div>
+</div>
 
     <script>
       // Check if user is logged in
