--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         padding: 0;
         font-family: Arial, sans-serif;
         color: #2e7d32; /* Dark green text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
         position: relative;
         overflow: hidden;
       }
@@ -34,6 +31,13 @@
         height: 100%;
         object-fit: cover;
         z-index: -1;
+      }
+      .maincontainer{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
       .container {
@@ -87,24 +91,29 @@
       a:hover {
         text-decoration: underline;
       }
+      img{
+        margin: 5px;
+      }
     </style>
   </head>
   <body>
+    <a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
+    <div class="maincontainer">
+      <div class="container">
+        <h2>Welcome to the E-Voting System</h2>
+        <p class="tagline">Secure & Transparent Digital Voting</p>
 
-    <div class="container">
-      <h2>Welcome to the E-Voting System</h2>
-      <p class="tagline">Secure & Transparent Digital Voting</p>
+        <input type="email" id="email" placeholder="Enter Email" />
+        <input type="password" id="password" placeholder="Enter Password" />
+        <button onclick="login()">Login</button>
 
-      <input type="email" id="email" placeholder="Enter Email" />
-      <input type="password" id="password" placeholder="Enter Password" />
-      <button onclick="login()">Login</button>
-
-      <p>Don't have an account? <a href="register.html">Register</a></p>
-      <button onclick="goToAdminLogin()">View Results</button>
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+        <button onclick="goToAdminLogin()">View Results</button>
+      </div>
     </div>
 
     <script>
