--- a/register.html
+++ b/register.html
@@ -17,10 +17,8 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        color: #2e7d32; /* Dark green text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        color: #2e7d32; /* Dark green texefer*/
+
         position: relative;
         overflow: hidden;
       }
@@ -90,14 +88,24 @@
         width: 10px;
         height: 10px;
       }
+      .maincontainer{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      img{
+        margin: 5px;
+      }
     </style>
   </head>
-  <body>
+  <body>    <a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
-
+<div class="maincontainer">
     <div class="container">
       <h2>Register to Vote</h2>
       <input type="text" id="name" placeholder="Full Name" />
@@ -116,6 +124,7 @@
       </div>
       <button onclick="register()">Register</button>
     </div>
+</div>
 
     <script>
       function register() {
@@ -134,7 +143,19 @@
 
         if (age < 18 && votingCard.value === "no") {
           alert(
-            "You are not eligible to register as you are under 18 and do not have a voting card issued before."
+            "You are not eligible to register as you are under 18 or may do not have a voting card issued before."
+          );
+          return;
+        }
+        if (age < 18 && votingCard.value === "yes") {
+          alert(
+            "You are not eligible to register as you are under 18 or may do not have a voting card issued before."
+          );
+          return;
+        }
+        if (age > 18 && votingCard.value === "no") {
+          alert(
+            "You are not eligible to register as you doesn't have voting card.Please apply for it first.."
           );
           return;
         }
