updated changes some

--- a/dashboard.html
+++ b/dashboard.html
@@ -89,17 +89,17 @@
       <h2>Welcome to E-Voting</h2>
       <p id="welcomeMessage"></p>
       <h3>Vote for Your Candidate</h3>
-      <button onclick="vote('NARAYAN RAO RANE SAHEB')">
-        Vote for NARAYAN RAO RANE SAHEB
+      <button onclick="vote('NARAYAN RAO RANE - BJP')">
+        Vote for NARAYAN RAO RANE - BJP
       </button>
-      <button onclick="vote('VINAYAK RAUT FALTU')">
-        Vote for VINAYAK RAUT FALTU'
+      <button onclick="vote('VINAYAK RAUT - SIVSENA')">
+        Vote for VINAYAK RAUT - SIVSENA'
       </button>
-      <button onclick="vote('NITESH RANE SAHEB')">
-        Vote for NITESH RANE SAHEB
+      <button onclick="vote('NITESH RANE SAHEB - CONGRESS')">
+        Vote for NITESH RANE SAHEB - CONGRESS
       </button>
-      <button onclick="vote('NILESH RANE SAHEB')">
-        Vote for NILESH RANE SAHEB
+      <button onclick="vote('NILESH RANE SAHEB - MANASE')">
+        Vote for NILESH RANE SAHEB - MANASE
       </button>
       <button onclick="logout()" style="background-color: red; width: 100px">
         Logout
