--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         object-fit: cover;
         z-index: -1;
       }
-      .maincontainer{
+      .maincontainer {
         height: 100%;
         width: 100%;
         display: flex;
@@ -91,13 +91,15 @@
       a:hover {
         text-decoration: underline;
       }
-      img{
-        margin: 5px;
+      img {
+        margin: 8px;
       }
     </style>
   </head>
   <body>
-    <a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>
+    <a href="/index.html"
+      ><img src="/homeicon.png" alt="home" height="36px"
+    /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
