--- a/admin-login.html
+++ b/admin-login.html
@@ -78,12 +78,16 @@
         justify-content: center;
         align-items: center;
       }
-      img{
-        margin: 5px;
+      img {
+        margin: 8px;
       }
     </style>
   </head>
-  <body><a href="/index.html"><img src="/homeicon.png" alt="home" height="36px" /></a>    <video class="video-bg" autoplay loop muted>
+  <body>
+    <a href="/index.html"
+      ><img src="/homeicon.png" alt="home" height="36px"
+    /></a>
+    <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
