--- a/register.html
+++ b/register.html
@@ -102,7 +102,7 @@
   </head>
   <body>
     <a href="/index.html"
-      ><img src="/homeicon.png" alt="home" height="36px"
+      ><img src="/homeicon1.png" alt="home" height="36px"
     /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
