--- a/results.html
+++ b/results.html
@@ -88,7 +88,7 @@
   </head>
   <body>
     <a href="/index.html"
-      ><img src="/homeicon.png" alt="home" height="36px"
+      ><img src="/homeicon1.png" alt="home" height="36px"
     /></a>
 
     <div class="maincontainer">
