--- a/results.html
+++ b/results.html
@@ -107,6 +107,6 @@
         <button onclick="logoutAdmin()">Logout</button>
       </div>
     </div>
-<script src="register.js"></script>
+<script src="results.js"></script>
   </body>
 </html>
