--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
       img {
         margin: 8px;
       }
+
+      @media only screen and (max-width: 500px) {
+        .container {
+          width: 85%;
+          padding: 5px;
+          border-radius: 18px;
+        }
+      }
     </style>
   </head>
   <body>
