--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
         overflow: hidden;
       }
       /* Video background */
-      .video-bg {
+      /* .video-bg {
         position: absolute;
         top: 0;
         left: 0;
@@ -31,7 +31,7 @@
         height: 100%;
         object-fit: cover;
         z-index: 0;
-      }
+      } */
       .container {
         width: 80%;
         max-width: 450px;
@@ -42,6 +42,7 @@
         text-align: center;
         position: relative;
         z-index: 1;
+       
       }
       h2,
       h3 {
@@ -76,6 +77,8 @@
       }
       img {
         margin: 8px;
+        background-color: green;
+        border-radius: 10px;
       }
     </style>
   </head>
@@ -83,10 +86,10 @@
     <a href="/index.html"
       ><img src="/homeicon1.png" alt="home" height="36px"
     /></a>
-    <video class="video-bg" autoplay loop muted>
+    <!-- <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
-    </video>
+    </video> -->
     <div class="maincontainer">
       <div class="container">
         <h2>Welcome to E-Voting</h2>
