--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>E-Voting Login</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-      /* Ensure full height */
-      
+
       * {
         font-family: "Poppins", sans-serif;
+        box-sizing: border-box;
       }
+
       html,
       body {
         height: 100%;
         width: 100%;
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
         color: #2e7d32; /* Dark green text */
         position: relative;
         overflow: hidden;
@@ -33,12 +33,21 @@
         object-fit: cover;
         z-index: -1;
       }
+
       .maincontainer {
         height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
+      }
+
+      .home-link {
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        z-index: 2;
       }
 
       .container {
@@ -56,11 +65,13 @@
       h2 {
         color: #1b5e20;
       }
+
       .tagline {
         font-size: 14px;
         color: #388e3c;
         margin-bottom: 20px;
       }
+
       input,
       button {
         display: block;
@@ -71,9 +82,11 @@
         border-radius: 5px;
         font-size: 16px;
       }
+
       input {
         background-color: #f1f8e9;
       }
+
       button {
         background-color: #388e3c;
         color: white;
@@ -81,39 +94,50 @@
         font-weight: bold;
         border: none;
       }
+
       button:hover {
         background-color: #2e7d32;
       }
+
       a {
         color: #1b5e20;
         text-decoration: none;
         font-weight: bold;
       }
+
       a:hover {
         text-decoration: underline;
       }
-      img {
-        margin: 8px;
+
+      .home-link img {
+        height: 36px;
+        transition: transform 0.2s ease;
+      }
+
+      .home-link img:hover {
+        transform: scale(1.1);
       }
 
       @media only screen and (max-width: 500px) {
         .container {
           width: 85%;
-          padding: 5px;
+          padding: 10px;
           border-radius: 18px;
         }
       }
     </style>
   </head>
   <body>
-    <a href="/index.html"
-      ><img src="/homeicon1.png" alt="home" height="36px"
-    /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
+
     <div class="maincontainer">
+      <a href="/index.html" class="home-link">
+        <img src="/homeicon1.png" alt="home" />
+      </a>
+
       <div class="container">
         <h2>Welcome to the E-Voting System</h2>
         <p class="tagline">Secure & Transparent Digital Voting</p>
@@ -127,6 +151,6 @@
       </div>
     </div>
 
-<script src="index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
