--- a/register.html
+++ b/register.html
@@ -6,19 +6,19 @@
     <title>Register - E-Voting</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-      /* Ensure full height */
+
       * {
         font-family: "Poppins", sans-serif;
+        box-sizing: border-box;
       }
+
       html,
       body {
         height: 100%;
         width: 100%;
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
-        color: #2e7d32; /* Dark green texefer*/
-
+        color: #2e7d32; /* Dark green text */
         position: relative;
         overflow: hidden;
       }
@@ -32,6 +32,22 @@
         height: 100%;
         object-fit: cover;
         z-index: -1;
+      }
+
+      .maincontainer {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      }
+
+      .home-link {
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        z-index: 2;
       }
 
       .container {
@@ -49,6 +65,7 @@
       h2 {
         color: #1b5e20;
       }
+
       input,
       button {
         display: block;
@@ -59,9 +76,11 @@
         border-radius: 5px;
         font-size: 16px;
       }
+
       input {
         background-color: #f1f8e9;
       }
+
       button {
         background-color: #388e3c;
         color: white;
@@ -69,65 +88,82 @@
         font-weight: bold;
         border: none;
       }
+
       button:hover {
         background-color: #2e7d32;
       }
+
       .radio-group {
+        color: gray;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        width: 85%;
+        width: 93%;
         margin: 10px auto;
       }
+
       .radio-group label {
         display: flex;
         align-items: center;
         gap: 25px;
       }
+
       .radio-group input[type="radio"] {
         width: 10px;
         height: 10px;
       }
-      .maincontainer {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
+      .home-link img {
+        height: 36px;
+        transition: transform 0.2s ease;
       }
-      img {
-        margin: 8px;
+
+      .home-link img:hover {
+        transform: scale(1.1);
+      }
+
+      @media only screen and (max-width: 500px) {
+        .container {
+          width: 85%;
+          padding: 10px;
+          border-radius: 18px;
+        }
       }
     </style>
   </head>
   <body>
-    <a href="/index.html"
-      ><img src="/homeicon1.png" alt="home" height="36px"
-    /></a>
     <video class="video-bg" autoplay loop muted>
       <source src="background.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
+
     <div class="maincontainer">
+      <a href="/index.html" class="home-link">
+        <img src="/homeicon1.png" alt="home" />
+      </a>
+
       <div class="container">
         <h2>Register to Vote</h2>
         <input type="text" id="name" placeholder="Full Name" />
         <input type="email" id="email" placeholder="Email" />
         <input type="password" id="password" placeholder="Password" />
         <input type="number" id="age" placeholder="Age" />
+
         <div class="radio-group">
           <label>
-            <input type="radio" name="votingCard" value="yes" /> I have a voting
-            card issued before
+            <input type="radio" name="votingCard" value="yes" />
+            I have a voting card issued before
           </label>
           <label>
-            <input type="radio" name="votingCard" value="no" /> I do not have a
-            voting card
+            <input type="radio" name="votingCard" value="no" />
+            I do not have a voting card
           </label>
         </div>
+
         <button onclick="register()">Register</button>
       </div>
     </div>
-<script src="register.js"></script>
+
+    <script src="register.js"></script>
   </body>
 </html>
