--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </a>
 
       <div class="container">
-        <h2>Welcome to the E-Voting System</h2>
+        <h2>Welcome to the E-Voting Systemmmmmm</h2>
         <p class="tagline">Secure & Transparent Digital Voting</p>
 
         <input type="email" id="email" placeholder="Enter Email" />
