--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
         font-family: Arial, sans-serif;
         background-color: #e8f5e9; /* Light green background */
         color: #2e7d32; /* Dark green text */
-
+/* border-radius: 0cm; */
         position: relative;
         overflow: hidden;
       }
@@ -115,3 +115,6 @@
 <script src="dashboard.js"></script>
   </body>
 </html>
+
+
+<!-- zkdsfjnilfndvsnveisdhbvdsnvjnvdkjnv -->
